--- a/public/styles.css
+++ b/public/styles.css
@@ -201,8 +201,8 @@ h1, h2, h3 {
   flex-direction: column;
   margin: auto;
   margin-top: 50px;
-  width: 14vw;
-  height: 52vh;
+  width: 250px;
+  height: 450px;
   border: solid #343434 2px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: 500ms;
@@ -457,6 +457,7 @@ ul {
 
 .img-accueil {
   background-image: url("Image/image-accueil.jpg");
+  background-repeat: no-repeat;
   background-size: 100%;
   background-position: bottom;
   height: 50vh;
@@ -519,48 +520,54 @@ ul {
   }
   .toggle {
     display: block;
-    font-size: 2rem;
+    font-size: 60px;
     cursor: pointer;
     position: relative;
     z-index: 20;
   }
   .logo {
     position: relative;
-    z-index: 20;
+    z-index: 0;
   }
   .ouvrir {
     display: block;
-    font-size: 100px;
-    margin-right: 30px;
+    margin-left: 80vw;
     margin-top: 10px;
+    z-index: 101;
   }
   .fermer {
     display: none;
     font-size: 110px;
     margin-right: 30px;
+    z-index: 101;
   }
   .open .ouvrir {
     display: none;
+    z-index: 101;
   }
   .open .fermer {
     display: block;
+    z-index: 101;
+    transform: translate(-17%, -35%);
+    transition: transform 1s;
   }
   .open .menu {
     transform: translateX(0);
   }
   .menu {
     position: absolute;
-    display: flex;
+    display: flex !important;
     top: 0;
     left: 0;
-    width: 80%;
-    height: 100vh;
+    width: 80% !important;
+    height: 100vh !important;
     border-right: #000 solid 6px;
     background: #fff;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-evenly !important;
     transform: translateX(-100%);
     transition: transform 1s;
+    z-index: 10;
   }
   .menu div {
     display: flex;
@@ -597,13 +604,13 @@ ul {
     border-bottom: #000 solid 6px;
   }
   .menu a {
-    font-size: 3rem;
+    font-size: 50px !important;
     text-decoration: none;
     color: #000;
     margin: auto;
   }
   .btn {
-    font-size: 2rem;
+    font-size: 20px;
   }
 }
 
