--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <style>
-    .example-wrapper { text-align: center; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; height: 80vh;}
+    .example-wrapper { text-align: center; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; height: 80vh; margin: auto;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     form {
         margin-top: 20px;
@@ -22,5 +22,6 @@
         <input type="email" required>
         <input type="submit" value="Payer" required>
     </form>
+    <button onclick="window.location.href ='/sae301/index.php/panier';" class="btn">Revenir au panier</button>
 </div>
 {% endblock %}
