--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -2,42 +2,21 @@
     <div class="container">
         <div class="row">
             <div class="footer-col">
-                <h4>company</h4>
+                <h4>Aide</h4>
                 <ul>
-                    <li><a href="#">about us</a></li>
-                    <li><a href="#">our services</a></li>
-                    <li><a href="#">privacy policy</a></li>
-                    <li><a href="#">affiliate program</a></li>
+                    <li><a href="{{ asset("privacy_policy.html") }}">Politique de confidentialité</a></li>
                 </ul>
             </div>
             <div class="footer-col">
-                <h4>get help</h4>
+                <h4>Acheter des billets</h4>
                 <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">shipping</a></li>
-                    <li><a href="#">returns</a></li>
-                    <li><a href="#">order status</a></li>
-                    <li><a href="#">payment options</a></li>
+                    <li><a href="#">Évênements</a></li>
+                    <li><a href="#">Lieux</a></li>
+                    <li><a href="#">Connexion</a></li>
+                    <li><a href="#">Inscription</a></li>
                 </ul>
             </div>
-            <div class="footer-col">
-                <h4>online shop</h4>
-                <ul>
-                    <li><a href="#">watch</a></li>
-                    <li><a href="#">bag</a></li>
-                    <li><a href="#">shoes</a></li>
-                    <li><a href="#">dress</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>follow us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+            <img src="{{ asset("Image/logo.png") }}" alt="">
         </div>
     </div>
 </footer>
